--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
         "mockery/mockery": "^1.4.4",
+        "nunomaduro/larastan": "^2.0",
         "phpunit/phpunit": "^9.5.10"
     },
     "autoload": {
